--- a/test/assessmentSpecs/specs/scriptOnclickRequiresOnKeypress/scriptOnclickRequiresOnKeypress.html
+++ b/test/assessmentSpecs/specs/scriptOnclickRequiresOnKeypress/scriptOnclickRequiresOnKeypress.html
@@ -1,44 +1,24 @@
 <!doctype html>
 <html>
 <head>
-	<title>scriptOnclickRequiresOnKeypress</title>
+  <title>scriptOnclickRequiresOnKeypress</title>
 </head>
 <body>
-	<div data-expected="fail">
-		<input name="num" onclick="'foo';" value="0" class="quail-failed-element"/>
-	</div>
+  <div data-expected="fail">
+    <input id="assert-1" name="num" onclick="'foo';" value="0"/>
+  </div>
 
-	<div data-expected="pass">
-		<input name="num" type="text" value="0"/>
-	</div>
+  <div data-expected="pass">
+    <input id="assert-2" name="num" onclick="'foo';" onkeypress="'bar';" value="0">
+  </div>
 
-	<div data-expected="pass">
-		<input name="num" onclick="'foo';" onkeypress="'bar';" value="0">
-	</div>
+  <div data-expected="fail">
+    <a id="assert-3" onclick="'foo';" href="scriptOnclickRequiresOnKeypress.html">A link!</a>
+  </div>
 
-	<div data-expected="fail">
-		<a onclick="'foo';" class="quail-failed-element" href="scriptOnclickRequiresOnKeypress.html">A link!</a>
-	</div>
+  <div data-expected="pass">
+    <a id="assert-4" onclick="'foo';" onkeypress="'bar';" href="scriptOnclickRequiresOnKeypress.html">A link!</a>
+  </div>
 
-	<div data-expected="fail">
-		<a class="quail-failed-element" id="jquery-event" href="scriptOnclickRequiresOnKeypress.html">A jQuery event link!</a>
-	</div>
-
-	<div data-expected="pass">
-		<a onclick="'foo';" onkeypress="'bar';" href="scriptOnclickRequiresOnKeypress.html">A link!</a>
-	</div>
-
-	<div data-expected="pass">
-		<a href="scriptOnclickRequiresOnKeypress.html">A link!</a>
-	</div>
-
-
-	<script>
-		document.addEventListener('testsReady', function() {
-			$('#jquery-event').on('click', function() {
-				return false;
-			});
-		});
-	</script>
-		</body>
+  </body>
 </html>
