--- a/test/assessmentSpecs/specs/basefontIsNotUsed/basefontIsNotUsed-nomatch.html
+++ b/test/assessmentSpecs/specs/basefontIsNotUsed/basefontIsNotUsed-nomatch.html
@@ -5,7 +5,7 @@
   </head>
   <body>
 
-    <div data-expected="pass">
+    <div data-expected="inapplicable">
       <p>A paragraph with no basefont.</p>
     </div>
 
