Converted scriptOnmouseoverHasOnfocus to Selenium

--- a/test/assessmentSpecs/specs/scriptOnmouseoverHasOnfocus/scriptOnmouseoverHasOnfocus.html
+++ b/test/assessmentSpecs/specs/scriptOnmouseoverHasOnfocus/scriptOnmouseoverHasOnfocus.html
@@ -1,12 +1,11 @@
 <!doctype html>
 <html>
-<head>
-	<title>scriptOnmouseoverHasOnfocus</title>
-</head>
-<body>
-	<div data-expected="pass">
-		<input name="num" onmouseover="'foo';" onfocus="'bar';" value="0">
-	</div>
-
+  <head>
+    <title>scriptOnmouseoverHasOnfocus</title>
+  </head>
+  <body>
+    <div data-expected="pass">
+      <input id="assert-1" name="num" onmouseover="'foo';" onfocus="'bar';" value="0">
+    </div>
   </body>
 </html>
