Converted passwordHasLabel to Selenium

--- a/test/assessmentSpecs/specs/passwordHasLabel/passwordHasLabel.html
+++ b/test/assessmentSpecs/specs/passwordHasLabel/passwordHasLabel.html
@@ -7,7 +7,7 @@
     <div data-expected="fail">
         <form action="http://somesite.com/prog/adduser" method="post">
             <p>
-                <input type="password" title="" name="login-password" tabindex="1" class="quail-failed-element">
+                <input id="assert-1" type="password" title="" name="login-password" tabindex="1" />
             </p>
         </form>
     </div>
@@ -15,8 +15,7 @@
     <div data-expected="fail">
         <form action="http://somesite.com/prog/adduser" method="post">
             <p>
-                <input type="password" title="login password" name="login-password" tabindex="1"
-                 class="quail-failed-element"/>
+                <input id="assert-2" type="password" title="login password" name="login-password" tabindex="1" />
             </p>
         </form>
     </div>
@@ -25,7 +24,7 @@
         <form action="http://somesite.com/prog/adduser" method="post">
             <p>
                 <label>
-                    <input type="password" name="loginpassword" class="quail-failed-element"/>
+                    <input id="assert-3" type="password" name="loginpassword"/>
                 </label>
             </p>
         </form>
@@ -34,9 +33,8 @@
     <div data-expected="fail">
         <form action="http://somesite.com/prog/adduser" method="post">
             <p>
-                <label for="pass"></label>
-                <input id="pass" type="password" name="login-password" tabindex="1"
-                 class="quail-failed-element"/>
+                <label for="assert-4"></label>
+                <input id="assert-4" type="password" name="login-password" tabindex="1" />
             </p>
         </form>
     </div>
@@ -46,7 +44,7 @@
             <p>
                 <label>
                     login password:
-                    <input type="password" name="loginpassword" />
+                    <input id="assert-5" type="password" name="loginpassword" />
                 </label>
             </p>
         </form>
@@ -55,9 +53,8 @@
     <div data-expected="pass">
         <form action="http://somesite.com/prog/adduser" method="post">
             <p>
-                <label for="pass">Password:</label>
-                <input id="pass" type="password" name="login-password"
-                tabindex="1" />
+                <label for="assert-6">Password:</label>
+                <input id="assert-6" type="password" name="login-password" tabindex="1" />
             </p>
         </form>
     </div>
