Converted selectHasAssociatedLabel to Selenium

--- a/test/assessmentSpecs/specs/selectHasAssociatedLabel/selectHasAssociatedLabel.html
+++ b/test/assessmentSpecs/specs/selectHasAssociatedLabel/selectHasAssociatedLabel.html
@@ -8,7 +8,7 @@
 
         <form method="post" action="http://www.test.com">
             <p>
-                <select name="abcselect" id="animal" title="animal" class="quail-failed-element">
+                <select id="assert-1" name="abcselect" title="animal">
                     <option value="1">dog</option>
                     <option value="2">cat</option>
                     <option value="3">bird</option>
@@ -20,7 +20,7 @@
 
         <form method="post" action="http://www.test.com">
             <p>
-                <select name="abcselect" id="animal" title="" class="quail-failed-element">
+                <select id="assert-2" name="abcselect" title="">
                     <option value="1">dog</option>
                     <option value="2">cat</option>
                     <option value="3">bird</option>
@@ -32,7 +32,7 @@
 
         <form method="post" action="http://www.test.com">
             <p>
-                <select name="abcselect" id="animal" title="animal" class="quail-failed-element">
+                <select id="assert-3" name="abcselect" title="animal">
                     <option value="1">dog</option>
                     <option value="2">cat</option>
                     <option value="3">bird</option>
@@ -44,7 +44,7 @@
 
         <form method="post" action="http://www.test.com">
             <p>
-                <select name="abcselect" id="animal" title="    " class="quail-failed-element">
+                <select id="assert-4" name="abcselect" title="">
                     <option value="1">dog</option>
                     <option value="2">cat</option>
                     <option value="3">bird</option>
@@ -57,7 +57,7 @@
         <form method="post" action="http://www.test.com">
             <p>
                 <label>
-                    <select name="abcselect" id="animal" class="quail-failed-element">
+                    <select id="assert-5" name="abcselect">
                         <option value="1">dog</option>
                         <option value="2">cat</option>
                         <option value="3">bird</option>
@@ -71,7 +71,7 @@
         <form method="post" action="http://www.test.com">
             <p>
                 <label>
-                    <select name="abcselect" id="animal" class="quail-failed-element">
+                    <select id="assert-6" name="abcselect">
                         <option value="1">dog</option>
                         <option value="2">cat</option>
                         <option value="3">bird</option>
@@ -85,7 +85,7 @@
         <form method="post" action="http://www.test.com">
             <p>
                 <label>Animal:</label>
-                <select name="abcselect" id="animal" class="quail-failed-element">
+                <select id="assert-7" name="abcselect">
                     <option value="1">dog</option>
                     <option value="2">cat</option>
                     <option value="3">bird</option>
@@ -99,7 +99,7 @@
             <p>
                 <label>
                     Animal:
-                    <select name="abcselect" id="animal" class="quail-failed-element">
+                    <select id="assert-8" name="abcselect">
                         <option value="1">dog</option>
                         <option value="2">cat</option>
                         <option value="3">bird</option>
@@ -112,8 +112,8 @@
 
         <form method="post" action="http://www.test.com">
             <p>
-                <label for="animal">Animal:</label>
-                <select name="abcselect" id="animal">
+                <label for="assert-9">Animal:</label>
+                <select id="assert-9" name="abcselect">
                     <option value="1">dog</option>
                     <option value="2">cat</option>
                     <option value="3">bird</option>
