--- a/test/assessmentSpecs/specs/buttonHasName/buttonHasName.html
+++ b/test/assessmentSpecs/specs/buttonHasName/buttonHasName.html
@@ -1,35 +1,25 @@
 <!doctype html>
 <html>
-<head>
-	<title>buttonHasContent</title>
-</head>
-<body>
+  <head>
+    <title>buttonHasName</title>
+  </head>
+  <body>
 
-	<div data-expected="inapplicable"
-	data-accessibility-test="buttonHasName">
-		<!-- no button -->
-	</div>
+    <div data-expected="inapplicable">
+      <button id="assert-1" style="display:none"></button>
+    </div>
 
-	<div data-expected="inapplicable"
-	data-accessibility-test="buttonHasName">
-		<button style="display:none"></button>
-	</div>
+    <div data-expected="pass">
+      <button id="assert-2" id="button">Submit form</button>
+    </div>
 
-	<div data-expected="pass"
-	data-accessibility-test="buttonHasName">
-		<button id="button">Submit form</button>
-	</div>
+    <div data-expected="pass">
+      <!-- This should only be done if the button has some sort of background -->
+      <button id="assert-3" id="button" title="Submit form"></button>
+    </div>
 
-	<div data-expected="pass"
-	data-accessibility-test="buttonHasName">
-		<!-- This should only be done if the button has some sort of background -->
-		<button id="button" title="Submit form"></button>
-	</div>
-
-	<div data-expected="fail"
-	data-accessibility-test="buttonHasName">
-		<button id="button" class="quail-failed-element"></button>
-	</div>
-
+    <div data-expected="fail">
+      <button id="assert-4" id="button"></button>
+    </div>
   </body>
 </html>
