Converted documentTitleIsNotPlaceholder to Selenium

--- a/test/assessmentSpecs/specs/documentTitleIsNotPlaceholder/documentTitleIsNotPlaceholder-fail-2.html
+++ b/test/assessmentSpecs/specs/documentTitleIsNotPlaceholder/documentTitleIsNotPlaceholder-fail-2.html
@@ -1,11 +1,7 @@
 <!doctype html>
 <html data-expected="fail">
-
     <head>
-        <title class="quail-failed-element">this is the title</title>
+        <title id="assert-1">this is the title</title>
     </head>
-
-    <body>
-            </body>
-
+    <body></body>
 </html>
