Converted documentTitleNotEmpty to Selenium

--- a/test/assessmentSpecs/specs/documentTitleNotEmpty/documentTitleNotEmpty-fail.html
+++ b/test/assessmentSpecs/specs/documentTitleNotEmpty/documentTitleNotEmpty-fail.html
@@ -1,10 +1,7 @@
 <!doctype html>
-<html class="quail-test self-fail" data-expected="fail">
-	<head>
-		<title></title>
-	</head>
-	<body>
-
-
-			</body>
+<html data-expected="fail">
+  <head>
+    <title id="assert-1"></title>
+  </head>
+  <body></body>
 </html>
