Converted headersHaveText to Selenium

--- a/test/assessmentSpecs/specs/headersHaveText/headersHaveText.html
+++ b/test/assessmentSpecs/specs/headersHaveText/headersHaveText.html
@@ -5,16 +5,16 @@
 </head>
 <body>
     <div data-expected="fail">
-        <h2 class="quail-failed-element"></h2>
+        <h2 id="assert-1"></h2>
     </div>
     <div data-expected="fail">
-        <h2 class="quail-failed-element">
-            <img src="../assets/rex.jpg">
+        <h2 id="assert-2">
+            <img src="assets/rex.jpg">
         </h2>
     </div>
     <div data-expected="pass">
-        <h1>This is a correct header</h1>
-        <h2>This header is also OK.</h2>
+        <h1 id="assert-3">This is a correct header</h1>
+        <h2 id="assert-4">This header is also OK.</h2>
     </div>
 
     </body>
