Converted inputImageAltIsNotPlaceholder to Selenium

--- a/test/assessmentSpecs/specs/inputImageAltIsNotPlaceholder/inputImageAltIsNotPlaceholder.html
+++ b/test/assessmentSpecs/specs/inputImageAltIsNotPlaceholder/inputImageAltIsNotPlaceholder.html
@@ -5,36 +5,28 @@
 </head>
 <body>
     <div data-expected="fail">
-
         <form>
-            <label for="name1">Name</label>:
-            <br/>
-            <br/>
-            <input type="image" name="name" id="name1" src="../assets/name.jpg" alt="photo" class="quail-failed-element"></form>
+          <label for="assert-1">Name</label>:
+          <input type="image" name="name" id="assert-1" src="assets/name.jpg" alt="photo" />
+        </form>
     </div>
     <div data-expected="fail">
-
         <form>
-            <label for="name2">Name</label>:
-            <br/>
-            <br/>
-            <input type="image" name="name" id="name2" src="../assets/name.jpg" alt="16K bytes" class="quail-failed-element"></form>
+          <label for="assert-2">Name</label>:
+          <input type="image" name="name" id="assert-2" src="assets/name.jpg" alt="16K bytes" />
+        </form>
     </div>
     <div data-expected="fail">
-
         <form>
-            <label for="name3">Name</label>:
-            <br/>
-            <br/>
-            <input type="image" name="name" id="name3" src="../assets/name.jpg" alt="image" class="quail-failed-element"></form>
+          <label for="assert-3">Name</label>:
+          <input type="image" name="name" id="assert-3" src="assets/name.jpg" alt="image" />
+        </form>
     </div>
     <div data-expected="pass">
-
         <form>
-            <label for="name4">Name</label>:
-            <br/>
-            <br/>
-            <input type="image" name="name" id="name4" src="../assets/input.jpg" alt="input name"></form>
+          <label for="assert-4">Name</label>:
+          <input type="image" name="name" id="assert-4" src="assets/name.jpg" alt="input name" />
+        </form>
     </div>
 
     </body>
