Converted inputTextValueNotEmpty to Selenium

--- a/test/assessmentSpecs/specs/inputTextValueNotEmpty/inputTextValueNotEmpty.html
+++ b/test/assessmentSpecs/specs/inputTextValueNotEmpty/inputTextValueNotEmpty.html
@@ -7,13 +7,13 @@
 	<div data-expected="fail">
 		<form>
 			<label for="name">Name:</label>
-			<input type="text" name="name" id="name" class="quail-failed-element"/>
+			<input id="assert-1" type="text" name="name" id="name" />
 		</form>
 	</div>
 	<div data-expected="pass">
 		<form>
 			<label for="name">Name:</label>
-			<input type="text" name="name" id="name" value="your name">
+			<input id="assert-2" type="text" name="name" id="name" value="your name" />
 		</form>
 </div>
   </body>
